#261 - Fixed that the mapper.json was not found.