@@ -6,7 +6,6 @@ import org.springframework.core.io.ResourceLoader;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.nio.file.Files;
 
 @Service
 @RequiredArgsConstructor
@@ -16,8 +15,7 @@ public class MappingConfigurationFactory {
 
     public String newDocumentMappingConfiguration() {
         try {
-            return new String(Files.readAllBytes(
-                    resourceLoader.getResource("classpath:indexer/mapping.json").getFile().toPath()));
+            return new String(resourceLoader.getResource("classpath:indexer/mapping.json").getInputStream().readAllBytes());
         } catch (IOException e) {
             throw new MappingLoadingException("Unable to load the mapping for the index!", e);
         }
